# SeFT_Transformer

./: .gitignore  README.md  pyproject.toml
checkpoints/: cp.ckpt.index
logs/ex_batchSize_4_projDim_32_numHeads_2_normType_reZero/variables/: events.out.tfevents.1609112622.Kaans-MacBook-Pro.local.18647.882.v2
logs/ex_initLr_0.0001_dropRate_0.1_warmSteps_1000/train/: events.out.tfevents.1607670591.kaans-macbook-pro.home.87515.971.v2  events.out.tfevents.1607670636.kaans-macbook-pro.home.87593.971.v2  events.out.tfevents.1607670935.kaans-macbook-pro.home.87857.971.v2
logs/ex_initLr_0.0001_dropRate_0.1_warmSteps_1000/variables/: events.out.tfevents.1607670290.kaans-macbook-pro.home.87306.5.v2  events.out.tfevents.1607670320.kaans-macbook-pro.home.87374.5.v2  events.out.tfevents.1607670590.kaans-macbook-pro.home.87515.5.v2  events.out.tfevents.1607670635.kaans-macbook-pro.home.87593.5.v2  events.out.tfevents.1607670934.kaans-macbook-pro.home.87857.5.v2
logs/train/: events.out.tfevents.1606356912.bs-gpu13.19981.963.v2  events.out.tfevents.1606356999.bs-gpu13.profile-empty
logs/validation/: events.out.tfevents.1606357027.bs-gpu13.19981.7025.v2
medical_ts_datasets/: pyproject.toml
medical_ts_datasets/medical_ts_datasets/: physionet_2012.py  util.py
medical_ts_datasets/medical_ts_datasets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
medical_ts_datasets/pip-wheel-metadata/medical_ts_datasets-0.1.0.dist-info/: METADATA
seft_transformer/: blocks.py  callbacks.py  layers.py  main.py  misc.py  models.py  set_models.py  training_utils.py
seft_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wandb/: latest-run
wandb/run-20210226_154140-2cpie15b/: run-2cpie15b.wandb
wandb/run-20210226_154140-2cpie15b/files/: config.yaml  requirements.txt  wandb-metadata.json
(+13 files in other folders)
