[tool.poetry]
name = "seft_transformer"
version = "0.1.0"
description = ""
authors = ["Anonymous"]

[tool.poetry.dependencies]
python = "^3.7"
einops = "^0.3.0"
numpy = "^1.18.0"
medical_ts_datasets = { git = "https://github.com/ExpectationMax/medical_ts_datasets.git", branch = "master" }
scikit-learn = "^0.22.2"
tensorflow = "~2.3.0"
tensorflow-datasets = ">=2.0.0,<3.0.0"
tqdm = "^4.45.0"
wandb = "^0.10.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
seaborn = "^0.10.1"
matplotlib = "^3.2.1"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
main = "seft_transformer.main:main"
