[tool.poetry]
name = "medical-ts-datasets"
version = "0.1.0"
description = ""
authors = ["Anonymous"]

[tool.poetry.dependencies]
python = "^3.7"
pip = ">=19.0.0"
setuptools = ">=41.0.0"
tensorflow-datasets = "^3.1.0"
tensorflow = "^2.1.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
seaborn = "^0.10.1"
matplotlib = "^3.2.1"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
